2009-03-02  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl (load): Print an actual error on open
	instead of an empty string.

2009-03-02  Guillem Jover  <guillem@debian.org>

	* scripts/update-alternatives.pl: Do not use non-ASCII strings on C
	locale.
	(version): Likewise.

2009-03-02  Guillem Jover  <guillem@debian.org>

	* po/POTFILES.in: Remove reference to cleanup-info.pl.
	* scripts/.gitignore: Likewise.

2009-02-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Avoid logging too many
	useless messages about status change.

2009-02-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm (save, dump): Add new
	parameter asking that #PACKAGE# be replaced on the fly.
	* scripts/dpkg-gensymbols.pl: Replace #PACKAGE# while outputting
	symbols files.
	* man/dpkg-gensymbols.1: Document the new feature.
	* scripts/t/200_Dpkg_Shlibs.t,
	scripts/t/200_Dpkg_Shlibs/symbols.fake-2: Add test-case for
	replacement of #PACKAGE# on the fly (together with test of dump).

2009-02-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Add one more sanity check
	verifying that <link> and <path> are different (cf #509667 for a
	sample).

2009-02-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Improve output messages
	by identifying their origin and by being more consistent.
	* scripts/t/900_update_alternatives.t: Adjust test suite
	for one error message that's now on standard error instead
	of standard output.

2009-02-27  Guillem Jover  <guillem@debian.org>

	* lib/tarfn.c (get_prefix_name): New function.
	(DecodeTarHeader): On tar_format_ustar and if Prefix is not empty
	call get_prefix_name instead of aborting.
	* man/deb.5: Document that ustar format is now properly supported.

2009-02-27  Guillem Jover  <guillem@debian.org>

	* lib/tarfn.h (enum tar_format): New type.
	(struct TarInfo): Add new format member.