@@ -8,9 +8,9 @@ use strict;
 use warnings;
 
 my $srcdir = $ENV{srcdir} || '.';
-my $admindir = File::Spec->rel2abs("$srcdir/t.tmp/ua/admindir"),
-my $altdir = File::Spec->rel2abs("$srcdir/t.tmp/ua/alternatives");
-my $bindir = File::Spec->rel2abs("$srcdir/t.tmp/ua/bin");
+my $admindir = File::Spec->rel2abs("t.tmp/ua/admindir"),
+my $altdir = File::Spec->rel2abs("t.tmp/ua/alternatives");
+my $bindir = File::Spec->rel2abs("t.tmp/ua/bin");
 # XXX: switch to version without .pl
 my @ua = ("$srcdir/update-alternatives.pl", "--log", "/dev/null",
           "--quiet", "--admindir", "$admindir", "--altdir", "$altdir");
@@ -56,7 +56,7 @@ plan tests => (4 * ($nb_slaves + 1) + 2) * 24 # number of check_choices
 		+ 60;			      # rest
 
 sub cleanup {
-    system("rm -rf $srcdir/t.tmp/ua && mkdir -p $admindir && mkdir -p $altdir");
+    system("rm -rf t.tmp/ua && mkdir -p $admindir && mkdir -p $altdir");
     system("mkdir -p $bindir/more");
 }
 
