@@ -1,5 +1,10 @@
 2009-03-02  Guillem Jover  <guillem@debian.org>
 
+	* scripts/t/900_update_alternatives.t: Do not use $srcdir for t.tmp,
+	it's actually located in builddir.
+
+2009-03-02  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl (load): Print an actual error on open
 	instead of an empty string.
 
